--- a/winchester-service.html
+++ b/winchester-service.html
@@ -137,7 +137,7 @@
                         <h3 class="block-title">Serving Winchester and
                             Beyond</h3>
                         <p class="block-text">
-                            <strong>Local Experts Serving Winchester:</strong>
+                            <strong>Local Experts Serving Hampshire:</strong>
                             Our professional domestic and commercial cleaning
                             services in Winchester extend to Aldershot,
                             Camberley, Farnham, Basingstoke, Andover, and a host
