--- a/andover-service.html
+++ b/andover-service.html
@@ -111,7 +111,7 @@
                             Commercial Cleaning. We are dedicated to upholding
                             the highest standards with each and every visit.
                             Experience a bespoke cleaning service, meticulously
-                            tailored to your preferences and needs in Winchester
+                            tailored to your preferences and needs in Andover
                             and the surrounding area.
                         </p>
                     </div>
@@ -127,8 +127,8 @@
                             home or business. We confidently offer a 100%
                             Satisfaction Guarantee for all our professional
                             cleaning services, ensuring you're delighted after
-                            every visit. As your reliable, trusted local
-                            partner, your peace of mind is our priority.
+                            every visit. As your reliable, trusted local partner
+                            in Andover, your peace of mind is our priority.
                         </p>
                     </div>
 
@@ -137,12 +137,12 @@
                         <h3 class="block-title">Serving Winchester and
                             Beyond</h3>
                         <p class="block-text">
-                            <strong>Local Experts Serving Winchester:</strong>
+                            <strong>Local Experts Serving Hampshire:</strong>
                             Our professional domestic and commercial cleaning
-                            services in Winchester extend to Aldershot,
-                            Camberley, Farnham, Basingstoke, Andover, and a host
-                            of other neighbouring communities within our 60-mile
-                            service radius.
+                            services in Andover extend to Winchester, Aldershot,
+                            Basingstoke, Camberley, Farnham, and a host of other
+                            neighbouring communities within our 60-mile service
+                            radius.
                         </p>
                     </div>
 
@@ -153,8 +153,8 @@
                             <strong>More Than Clean Homes – Building a Stronger
                                 Community:</strong> At Bantha Cleaning, we take
                             pride in not only delivering exceptional cleaning
-                            but also in supporting the local communities that we
-                            cherish.
+                            but also in supporting the local Andover community
+                            that we cherish.
                         </p>
                     </div>
 
