--- a/andover-service.html
+++ b/andover-service.html
@@ -132,9 +132,9 @@
                         </p>
                     </div>
 
-                    <!-- Serving Winchester and Beyond -->
+                    <!-- Serving Andover and Beyond -->
                     <div class="content-block">
-                        <h3 class="block-title">Serving Winchester and
+                        <h3 class="block-title">Serving Andover and
                             Beyond</h3>
                         <p class="block-text">
                             <strong>Local Experts Serving Hampshire:</strong>
