--- a/fleet-service.html
+++ b/fleet-service.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>House & Commercial Cleaning Services in Aldershot</title>
+        <title>House & Commercial Cleaning Services in Fleet</title>
         <meta name="description"
-            content="Need a trusted local cleaner in Aldershot Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
+            content="Need a trusted local cleaner in Fleet Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="contact.css">
@@ -91,11 +91,11 @@
             <div class="welcome-container">
                 <!-- Main Title -->
                 <h1 class="welcome-title">Welcome to Bantha Cleaning
-                    Aldershot</h1>
+                    Fleet</h1>
 
                 <!-- Subtitle -->
                 <h2 class="welcome-subtitle">Your Professional House &
-                    Commercial Cleaning Partner in Aldershot and Surrounding
+                    Commercial Cleaning Partner in Fleet and Surrounding
                     Areas</h2>
 
                 <!-- Content Grid -->
@@ -111,7 +111,7 @@
                             Commercial Cleaning. We are dedicated to upholding
                             the highest standards with each and every visit.
                             Experience a bespoke cleaning service, meticulously
-                            tailored to your preferences and needs in Aldershot
+                            tailored to your preferences and needs in Fleet
                             and the surrounding area.
                         </p>
                     </div>
@@ -128,19 +128,19 @@
                             Satisfaction Guarantee for all our professional
                             cleaning services, ensuring you're delighted after
                             every visit. As your reliable, trusted local partner
-                            in Aldershot, your peace of mind is our priority.
+                            in Fleet, your peace of mind is our priority.
                         </p>
                     </div>
 
-                    <!-- Serving Aldershot and Beyond -->
+                    <!-- Serving Fleet and Beyond -->
                     <div class="content-block">
-                        <h3 class="block-title">Serving Aldershot and
+                        <h3 class="block-title">Serving Fleet and
                             Beyond</h3>
                         <p class="block-text">
                             <strong>Local Experts Serving Hampshire:</strong>
                             Our professional domestic and commercial cleaning
-                            services in Aldershot extend to Winchester, Basingstoke,
-                            Andover, Camberley, Farnham, and a host of other
+                            services in Fleet extend to Winchester, Basingstoke,
+                            Andover,Aldershot, Camberley, Farnham, and a host of other
                             neighbouring communities within our 60-mile service
                             radius.
                         </p>
@@ -153,7 +153,7 @@
                             <strong>More Than Clean Homes – Building a Stronger
                                 Community:</strong> At Bantha Cleaning, we take
                             pride in not only delivering exceptional cleaning
-                            but also in supporting the local Aldershot community
+                            but also in supporting the local Fleet community
                             that we cherish.
                         </p>
                     </div>
