--- a/farnborough-service.html
+++ b/farnborough-service.html
@@ -140,7 +140,7 @@
                             <strong>Local Experts Serving Hampshire:</strong>
                             Our professional domestic and commercial cleaning
                             services in Famborough extend to Winchester, Basingstoke,
-                            Andover, Aldershot, Camberley, Farnham, and a host of other
+                            Andover, Fleet, Aldershot, Camberley, Farnham, and a host of other
                             neighbouring communities within our 60-mile service
                             radius.
                         </p>
