--- a/hook-service.html
+++ b/hook-service.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>House & Commercial Cleaning Services in Farmham</title>
+        <title>House & Commercial Cleaning Services in hook</title>
         <meta name="description"
-            content="Need a trusted local cleaner in Farmham Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
+            content="Need a trusted local cleaner in hook Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="contact.css">
@@ -91,11 +91,11 @@
             <div class="welcome-container">
                 <!-- Main Title -->
                 <h1 class="welcome-title">Welcome to Bantha Cleaning
-                    Farmham</h1>
+                    hook</h1>
 
                 <!-- Subtitle -->
                 <h2 class="welcome-subtitle">Your Professional House &
-                    Commercial Cleaning Partner in Farmham and Surrounding
+                    Commercial Cleaning Partner in hook and Surrounding
                     Areas</h2>
 
                 <!-- Content Grid -->
@@ -111,7 +111,7 @@
                             Commercial Cleaning. We are dedicated to upholding
                             the highest standards with each and every visit.
                             Experience a bespoke cleaning service, meticulously
-                            tailored to your preferences and needs in Farmham
+                            tailored to your preferences and needs in hook
                             and the surrounding area.
                         </p>
                     </div>
@@ -128,19 +128,19 @@
                             Satisfaction Guarantee for all our professional
                             cleaning services, ensuring you're delighted after
                             every visit. As your reliable, trusted local partner
-                            in Farmham, your peace of mind is our priority.
+                            in hook, your peace of mind is our priority.
                         </p>
                     </div>
 
-                    <!-- Serving Farmham and Beyond -->
+                    <!-- Serving hook and Beyond -->
                     <div class="content-block">
-                        <h3 class="block-title">Serving Farmham and
+                        <h3 class="block-title">Serving hook and
                             Beyond</h3>
                         <p class="block-text">
                             <strong>Local Experts Serving Hampshire:</strong>
                             Our professional domestic and commercial cleaning
-                            services in Farmham extend to Winchester, Basingstoke,
-                            Andover, Fleet, Aldershot, Camberley, Farnborough, and a host of other
+                            services in hook extend to Winchester, Basingstoke,
+                            Andover, Fleet, Farnham, Aldershot, Camberley, Farnborough, and a host of other
                             neighbouring communities within our 60-mile service
                             radius.
                         </p>
@@ -153,7 +153,7 @@
                             <strong>More Than Clean Homes – Building a Stronger
                                 Community:</strong> At Bantha Cleaning, we take
                             pride in not only delivering exceptional cleaning
-                            but also in supporting the local Farmham community
+                            but also in supporting the local hook community
                             that we cherish.
                         </p>
                     </div>
