--- a/ash-vale-service.html
+++ b/ash-vale-service.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>House & Commercial Cleaning Services in woking</title>
+        <title>House & Commercial Cleaning Services in ash vale</title>
         <meta name="description"
-            content="Need a trusted local cleaner in woking Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
+            content="Need a trusted local cleaner in ash vale Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="contact.css">
@@ -91,11 +91,11 @@
             <div class="welcome-container">
                 <!-- Main Title -->
                 <h1 class="welcome-title">Welcome to Bantha Cleaning
-                    woking</h1>
+                    ash vale</h1>
 
                 <!-- Subtitle -->
                 <h2 class="welcome-subtitle">Your Professional House &
-                    Commercial Cleaning Partner in woking and Surrounding
+                    Commercial Cleaning Partner in ash vale and Surrounding
                     Areas</h2>
 
                 <!-- Content Grid -->
@@ -111,7 +111,7 @@
                             Commercial Cleaning. We are dedicated to upholding
                             the highest standards with each and every visit.
                             Experience a bespoke cleaning service, meticulously
-                            tailored to your preferences and needs in woking
+                            tailored to your preferences and needs in ash vale
                             and the surrounding area.
                         </p>
                     </div>
@@ -128,18 +128,18 @@
                             Satisfaction Guarantee for all our professional
                             cleaning services, ensuring you're delighted after
                             every visit. As your reliable, trusted local partner
-                            in woking, your peace of mind is our priority.
+                            in ash vale, your peace of mind is our priority.
                         </p>
                     </div>
 
-                    <!-- Serving woking and Beyond -->
+                    <!-- Serving ash vale and Beyond -->
                     <div class="content-block">
-                        <h3 class="block-title">Serving woking and
+                        <h3 class="block-title">Serving ash vale and
                             Beyond</h3>
                         <p class="block-text">
                             <strong>Local Experts Serving Hampshire:</strong>
                             Our professional domestic and commercial cleaning
-                            services in woking extend to Winchester, Basingstoke,
+                            services in ash vale extend to Winchester, Basingstoke,
                             Andover, Fleet, Farnham, Aldershot, Camberley, Farnborough, and a host of other
                             neighbouring communities within our 60-mile service
                             radius.
@@ -153,7 +153,7 @@
                             <strong>More Than Clean Homes – Building a Stronger
                                 Community:</strong> At Bantha Cleaning, we take
                             pride in not only delivering exceptional cleaning
-                            but also in supporting the local woking community
+                            but also in supporting the local ash vale community
                             that we cherish.
                         </p>
                     </div>
