--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
                 </div>
             </div>
 
+            <!-- ADDED: Areas We Cover Dropdown -->
+            <div class="nav-item">
+                <a href="#" class="nav-link areas-toggle">
+                    Areas We Cover
+                    <span class="dropdown-arrow">▼</span>
+                </a>
+                <div class="dropdown areas-dropdown">
+                    <a href="winchester-service.html">Winchester</a>
+                    <a href="andover-service.html">Andover</a>
+                    <a href="basingstoke-service.html">Basingstoke</a>
+                    <a href="aldershot-service.html">Aldershot</a>
+                    <a href="fleet-service.html">Fleet</a>
+                    <a href="farnborough-service.html">Farnborough</a>
+                    <a href="farnham-service.html">Farnham</a>
+                    <a href="hook-service.html">Hook</a>
+                    <a href="woking-service.html">Woking</a>
+                    <a href="ash-vale-service.html">Ash Vale</a>
+                </div>
+            </div>
+
             <div class="nav-item">
                 <a href="blog.html" class="nav-link">Blog</a>
             </div>
@@ -62,7 +82,7 @@
                 <a href="contact.html" class="nav-link">Contact</a>
             </div>
 
-            <!-- ADDED: Mobile Opening Hours (shows at bottom of mobile menu) -->
+            <!-- Mobile Opening Hours (shows at bottom of mobile menu) -->
             <div class="mobile-opening-hours">
                 <h3>Opening Hours Today</h3>
                 <div class="current-hours">
