--- a/blog.html
+++ b/blog.html
@@ -19,10 +19,8 @@
         <!-- Logo -->
         <div class="logo-section">
             <a href="/">
-                <img src="logo.png" alt="Company Logo" class="logo"
-                    onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                <img src="logo.png" alt="Company Logo" class="logo">
             </a>
-            <div style="display:none; font-weight:bold; font-size:1.2rem; color:#333;">LOGO</div>
         </div>
 
         <!-- Opening Hours (Desktop) -->
@@ -39,7 +37,6 @@
             <div class="nav-item">
                 <a href="/" class="nav-link">Home</a>
             </div>
-
             <div class="nav-item">
                 <a href="#" class="nav-link services-toggle">
                     Services
@@ -50,22 +47,29 @@
                     <a href="deepcleaning.html">Deep Cleaning</a>
                 </div>
             </div>
-
+            <div class="nav-item">
+                <a href="#" class="nav-link areas-toggle">
+                    Areas We Cover
+                    <span class="dropdown-arrow">▼</span>
+                </a>
+                                <div class="dropdown">
+                    <a href="winchester-service.html">Winchester</a>
+                    <a href="andover-service.html">Andover</a>
+                    <a href="basingstoke-service.html">Basingstoke</a>
+                    <a href="aldershot-service.html">Aldershot</a>
+                    <a href="fleet-service.html">Fleet</a>
+                    <a href="farnborough-service.html">Farnborough</a>
+                    <a href="farnham-service.html">Farnham</a>
+                    <a href="hook-service.html">Hook</a>
+                    <a href="woking-service.html">Woking</a>
+                    <a href="ash-vale-service.html">Ash Vale</a>
+                </div>
+            </div>
             <div class="nav-item">
                 <a href="blog.html" class="nav-link">Blog</a>
             </div>
-
             <div class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
-            </div>
-
-            <!-- ADDED: Mobile Opening Hours (shows at bottom of mobile menu) -->
-            <div class="mobile-opening-hours">
-                <h3>Opening Hours Today</h3>
-                <div class="current-hours">
-                    <span class="status-dot" id="mobile-status-dot"></span>
-                    <span id="mobile-current-day"></span> - <span id="mobile-current-hours"></span>
-                </div>
             </div>
         </nav>
 
@@ -79,6 +83,15 @@
 
     <!-- Mobile Overlay -->
     <div class="mobile-overlay"></div>
+    
+    <!-- MOVED: Mobile Opening Hours (outside nav-menu for fixed positioning) -->
+    <div class="mobile-opening-hours">
+        <h3>Opening Hours Today</h3>
+        <div class="current-hours">
+            <span class="status-dot" id="mobile-status-dot"></span>
+            <span id="mobile-current-day"></span> - <span id="mobile-current-hours"></span>
+        </div>
+    </div>
 </header>
 
     <!-- Add Post Button -->
