--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <!-- Logo -->
         <div class="logo-section">
             <a href="/">
-                <img src="logo.png" alt="Company Logo" class="logo">
+                <img src="logo.png" alt="Bantha Cleaning Logo" class="logo" fetchpriority="high">
             </a>
         </div>
 
