--- a/contact.html
+++ b/contact.html
@@ -345,7 +345,7 @@
             return false;
         }
     </script>
-    <script src="header.js"></script>
+    <script src="/header.js" defer></script>
 </body>
 </html>
 
