--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
             content="Need a cleaning quote fast? Contact Bantha Cleaning, your trusted local cleaner in Aldershot, Basingstoke, Camberley & Winchester. Call or book online now!">
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- <link rel="stylesheet" href="header.css"> -->
+     <link rel="preconnect" href="https://maps.googleapis.com">
     <link rel="stylesheet" href="contact.css">
     <link rel="icon" type="image/png" href="logontp.png">
     <link rel="shortcut icon" type="image/png" href="logontp.png">
