--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,8 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- <link rel="stylesheet" href="header.css"> -->
      <link rel="preconnect" href="https://maps.googleapis.com">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="/contact.css" media="print" onload="this.media='all'">
+<noscript><link rel="stylesheet" href="/contact.css"></noscript>
     <link rel="icon" type="image/png" href="logontp.png">
     <link rel="shortcut icon" type="image/png" href="logontp.png">
     <link rel="apple-touch-icon" href="logontp.png">
