--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="canonical" href="https://banthacleaning.com/" />
         <meta content="0; url=https://banthacleaning.com/" />
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" type="image/png" href="logontp.png">
+        <link rel="icon" type="image/png" href="webimg/logontp.png">
         <link rel="shortcut icon" type="image/png" href="logontp.png">
         <link rel="apple-touch-icon" href="logontp.png">
     </head>
