--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             content="Looking for reliable cleaning services in Aldershot? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
         <link rel="canonical" href="https://banthacleaning.com/" />
         <meta content="0; url=https://banthacleaning.com/" />
-        <!-- <link rel="stylesheet" href="header.css"> -->
+        <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="style.css">
-        <!-- <link rel="stylesheet" href="offer.css"> -->
+        <link rel="stylesheet" href="offer.css">
         <link rel="icon" type="image/png" href="logontp.png">
         <link rel="shortcut icon" type="image/png" href="logontp.png">
         <link rel="apple-touch-icon" href="logontp.png">
