--- a/contact/index.html
+++ b/contact/index.html
@@ -6,13 +6,11 @@
     <title>Contact</title>
     <meta name="description"
             content="Need a cleaning quote fast? Contact Bantha Cleaning, your trusted local cleaner in Aldershot, Basingstoke, Camberley & Winchester. Call or book online now!">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <!-- <link rel="stylesheet" href="header.css"> -->
      <link rel="preconnect" href="https://maps.googleapis.com">
-    <link rel="stylesheet" href="/contact.css"> 
-    <link rel="icon" type="image/png" href="logontp.png">
-    <link rel="shortcut icon" type="image/png" href="logontp.png">
-    <link rel="apple-touch-icon" href="logontp.png">
+    <link rel="stylesheet" href="contact.css">
+    <link rel="icon" type="image/png" href="../webimg/logontp.png">
+        <link rel="shortcut icon" type="image/png" href="../webimg/logontp.png">
+        <link rel="apple-touch-icon" href="../webimg/logontp.png">
 </head>
 <body>
     <header class="header">
@@ -20,7 +18,7 @@
         <!-- Logo -->
         <div class="logo-section">
             <a href="/">
-                <img src="logo.png" alt="Bantha Cleaning Logo" class="logo" fetchpriority="high">
+                <img src="../webimg/logo.png" alt="Bantha Cleaning Logo" class="logo" fetchpriority="high">
             </a>
         </div>
 
@@ -44,8 +42,8 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                 <div class="dropdown">
-                    <a href="generalcleaning.html">General Cleaning</a>
-                    <a href="deepcleaning.html">Deep Cleaning</a>
+                    <a href="../generalcleaning/">General Cleaning</a>
+                    <a href="../deepcleaning/">Deep Cleaning</a>
                 </div>
             </div>
             <div class="nav-item">
@@ -54,23 +52,23 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                                 <div class="dropdown">
-                    <a href="winchester-service.html">Winchester</a>
-                    <a href="andover-service.html">Andover</a>
-                    <a href="basingstoke-service.html">Basingstoke</a>
-                    <a href="aldershot-service.html">Aldershot</a>
-                    <a href="fleet-service.html">Fleet</a>
-                    <a href="farnborough-service.html">Farnborough</a>
-                    <a href="farnham-service.html">Farnham</a>
-                    <a href="hook-service.html">Hook</a>
-                    <a href="woking-service.html">Woking</a>
-                    <a href="ash-vale-service.html">Ash Vale</a>
+                    <a href="../winchester-service/">Winchester</a>
+                    <a href="../andover-service/">Andover</a>
+                    <a href="../basingstoke-service/">Basingstoke</a>
+                    <a href="../aldershot-service/">Aldershot</a>
+                    <a href="../fleet-service/">Fleet</a>
+                    <a href="../farnborough-service/">Farnborough</a>
+                    <a href="../farnham-service/">Farnham</a>
+                    <a href="../hook-service/">Hook</a>
+                    <a href="../woking-service/">Woking</a>
+                    <a href="../ash-vale-service/">Ash Vale</a>
                 </div>
             </div>
             <div class="nav-item">
-                <a href="blog.html" class="nav-link">Blog</a>
+                <a href="../blog/" class="nav-link">Blog</a>
             </div>
             <div class="nav-item">
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="../contact/" class="nav-link">Contact</a>
             </div>
         </nav>
 
@@ -210,34 +208,34 @@
             serving all major towns and communities in the area:</p>
 
         <div class="areas-grid">
-            <a href="winchester-service.html" class="area-item">
+            <a href="../winchester-service/" class="area-item">
                 <span class="area-name">Winchester</span>
             </a>
-            <a href="andover-service.html" class="area-item">
+            <a href="../andover-service/" class="area-item">
                 <span class="area-name">Andover</span>
             </a>
-            <a href="basingstoke-service.html" class="area-item">
+            <a href="../basingstoke-service/" class="area-item">
                 <span class="area-name">Basingstoke</span>
             </a>
-            <a href="aldershot-service.html" class="area-item">
+            <a href="../aldershot-service/" class="area-item">
                 <span class="area-name">Aldershot</span>
             </a>
-            <a href="fleet-service.html" class="area-item">
+            <a href="../fleet-service/" class="area-item">
                 <span class="area-name">Fleet</span>
             </a>
-            <a href="farnborough-service.html" class="area-item">
+            <a href="../farnborough-service/" class="area-item">
                 <span class="area-name">Farnborough</span>
             </a>
-            <a href="farnham-service.html" class="area-item">
+            <a href="../farnham-service/" class="area-item">
                 <span class="area-name">Farnham</span>
             </a>
-            <a href="hook-service.html" class="area-item">
+            <a href="../hook-service/" class="area-item">
                 <span class="area-name">Hook</span>
             </a>
-            <a href="woking-service.html" class="area-item">
+            <a href="../woking-service/" class="area-item">
                 <span class="area-name">Woking</span>
             </a>
-            <a href="ash-vale-service.html" class="area-item">
+            <a href="../ash-vale-service/" class="area-item">
                 <span class="area-name">Ash Vale</span>
             </a>
         </div>
@@ -257,18 +255,18 @@
                     <a href="javascript:void(0);" onclick="showHideMenu()">Service</a>
                     <div class="service-submenu" id="submenu">
                         <div class="submenu-item">
-                            <a href="generalcleaning.html">General Cleaning</a>
+                            <a href="../generalcleaning/">General Cleaning</a>
                         </div>
                         <div class="submenu-item">
-                            <a href="deepcleaning.html">Deep Cleaning</a>
+                            <a href="../deepcleaning/">Deep Cleaning</a>
                         </div>
                     </div>
                 </div>
                 <div class="menu-item">
-                    <a href="blog.html">Blog</a>
+                    <a href="../blog/">Blog</a>
                 </div>
                 <div class="menu-item">
-                    <a href="contact.html">Contact</a>
+                    <a href="../contact/">Contact</a>
                 </div>
             </div>
             
@@ -329,7 +327,7 @@
             <div class="footer-links">
                 <a href="#privacy-policy">Privacy Policy</a>
                 <a href="#terms-of-service">Terms of Service</a>
-                <a href="contact.html">Contact Us</a>
+                <a href="../contact/">Contact Us</a>
             </div>
         </div>
     </section>
@@ -346,7 +344,7 @@
             return false;
         }
     </script>
-    <script src="/header.js" defer></script>
+    <script src="../header.js" defer></script>
 </body>
 </html>
 
