--- a/fleet-service/index.html
+++ b/fleet-service/index.html
@@ -6,13 +6,11 @@
         <title>House & Commercial Cleaning Services in Fleet</title>
         <meta name="description"
             content="Need a trusted local cleaner in Fleet Bantha Cleaning offers reliable house, deep, and commercial cleaning services. Book your free quote today!">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="header.css">
-        <link rel="stylesheet" href="contact.css">
-        <link rel="stylesheet" href="area.css">
-        <link rel="icon" type="image/png" href="logontp.png">
-        <link rel="shortcut icon" type="image/png" href="logontp.png">
-        <link rel="apple-touch-icon" href="logontp.png">
+        <link rel="stylesheet" href="../headerandfooter.css">
+        <link rel="stylesheet" href="../area.css">
+        <link rel="icon" type="image/png" href="../webimg/logontp.png">
+        <link rel="shortcut icon" type="image/png" href="../webimg/logontp.png">
+        <link rel="apple-touch-icon" href="../webimg/logontp.png">
     </head>
     <body>
         <header class="header">
@@ -20,7 +18,7 @@
         <!-- Logo -->
         <div class="logo-section">
             <a href="/">
-                <img src="logo.png" alt="Company Logo" class="logo">
+                <img src="../webimg/logo.png" alt="Company Logo" class="logo">
             </a>
         </div>
 
@@ -44,8 +42,8 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                 <div class="dropdown">
-                    <a href="generalcleaning.html">General Cleaning</a>
-                    <a href="deepcleaning.html">Deep Cleaning</a>
+                    <a href="../generalcleaning/">General Cleaning</a>
+                    <a href="../deepcleaning/">Deep Cleaning</a>
                 </div>
             </div>
             <div class="nav-item">
@@ -54,23 +52,23 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                                 <div class="dropdown">
-                    <a href="winchester-service.html">Winchester</a>
-                    <a href="andover-service.html">Andover</a>
-                    <a href="basingstoke-service.html">Basingstoke</a>
-                    <a href="aldershot-service.html">Aldershot</a>
-                    <a href="fleet-service.html">Fleet</a>
-                    <a href="farnborough-service.html">Farnborough</a>
-                    <a href="farnham-service.html">Farnham</a>
-                    <a href="hook-service.html">Hook</a>
-                    <a href="woking-service.html">Woking</a>
-                    <a href="ash-vale-service.html">Ash Vale</a>
+                    <a href="../winchester-service/">Winchester</a>
+                    <a href="../andover-service/">Andover</a>
+                    <a href="../basingstoke-service/">Basingstoke</a>
+                    <a href="../aldershot-service/">Aldershot</a>
+                    <a href="../fleet-service/">Fleet</a>
+                    <a href="../farnborough-service/">Farnborough</a>
+                    <a href="../farnham-service/">Farnham</a>
+                    <a href="../hook-service/">Hook</a>
+                    <a href="../woking-service/">Woking</a>
+                    <a href="../ash-vale-service/">Ash Vale</a>
                 </div>
             </div>
             <div class="nav-item">
-                <a href="blog.html" class="nav-link">Blog</a>
+                <a href="../blog/" class="nav-link">Blog</a>
             </div>
             <div class="nav-item">
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="../contact/" class="nav-link">Contact</a>
             </div>
         </nav>
 
@@ -223,7 +221,7 @@
                                 space!</strong>
                         </p>
                         <div class="cta-buttons">
-                            <a href="contact.html" class="cta-btn primary">Get
+                            <a href="../contact/" class="cta-btn primary">Get
                                 Free Estimate</a>
                             <a href="tel:+447825183734"
                                 class="cta-btn secondary">Call Now</a>
@@ -247,19 +245,19 @@
                             onclick="showHideMenu()">Service</a>
                         <div class="service-submenu" id="submenu">
                             <div class="submenu-item">
-                                <a href="generalcleaning.html">General
+                                <a href="../generalcleaning/">General
                                     Cleaning</a>
                             </div>
                             <div class="submenu-item">
-                                <a href="deepcleaning.html">Deep Cleaning</a>
+                                <a href="../deepcleaning/">Deep Cleaning</a>
                             </div>
                         </div>
                     </div>
                     <div class="menu-item">
-                        <a href="blog.html">Blog</a>
+                        <a href="../blog/">Blog</a>
                     </div>
                     <div class="menu-item">
-                        <a href="contact.html">Contact</a>
+                        <a href="../contact/">Contact</a>
                     </div>
                 </div>
 
@@ -327,7 +325,7 @@
                 <div class="footer-links">
                     <a href="#privacy-policy">Privacy Policy</a>
                     <a href="#terms-of-service">Terms of Service</a>
-                    <a href="contact.html">Contact Us</a>
+                    <a href="../contact/">Contact Us</a>
                 </div>
             </div>
         </section>
@@ -343,6 +341,6 @@
             return false;
         }
     </script>
-        <script src="header.js"></script>
+        <script src="../header.js"></script>
     </body>
 </html>
