--- a/generalcleaning/index.html
+++ b/generalcleaning/index.html
@@ -6,12 +6,12 @@
         <title>General Cleaning</title>
         <meta name="description"
             content="Looking for trusted local cleaners? We offer general cleaning & home upkeep in Aldershot, Basingstoke, Camberley & Farnham.">
-        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="../headerandfooter.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="generalcleaning.css">
-        <link rel="icon" type="image/png" href="logontp.png">
-        <link rel="shortcut icon" type="image/png" href="logontp.png">
-        <link rel="apple-touch-icon" href="logontp.png">
+        <link rel="icon" type="image/png" href="../webimg/logontp.png">
+        <link rel="shortcut icon" type="image/png" href="../webimg/logontp.png">
+        <link rel="apple-touch-icon" href="../webimg/logontp.png">
     </head>
     <body>
         <header class="header">
@@ -19,7 +19,7 @@
         <!-- Logo -->
         <div class="logo-section">
             <a href="/">
-                <img src="logo.png" alt="Company Logo" class="logo">
+                <img src="../webimg/logo.png" alt="Company Logo" class="logo">
             </a>
         </div>
 
@@ -43,8 +43,8 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                 <div class="dropdown">
-                    <a href="generalcleaning.html">General Cleaning</a>
-                    <a href="deepcleaning.html">Deep Cleaning</a>
+                    <a href="../generalcleaning/">General Cleaning</a>
+                    <a href="../deepcleaning/">Deep Cleaning</a>
                 </div>
             </div>
             <div class="nav-item">
@@ -53,23 +53,23 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                                 <div class="dropdown">
-                    <a href="winchester-service.html">Winchester</a>
-                    <a href="andover-service.html">Andover</a>
-                    <a href="basingstoke-service.html">Basingstoke</a>
-                    <a href="aldershot-service.html">Aldershot</a>
-                    <a href="fleet-service.html">Fleet</a>
-                    <a href="farnborough-service.html">Farnborough</a>
-                    <a href="farnham-service.html">Farnham</a>
-                    <a href="hook-service.html">Hook</a>
-                    <a href="woking-service.html">Woking</a>
-                    <a href="ash-vale-service.html">Ash Vale</a>
+                    <a href="../winchester-service/">Winchester</a>
+                    <a href="../andover-service/">Andover</a>
+                    <a href="../basingstoke-service/">Basingstoke</a>
+                    <a href="../aldershot-service/">Aldershot</a>
+                    <a href="../fleet-service/">Fleet</a>
+                    <a href="../farnborough-service/">Farnborough</a>
+                    <a href="../farnham-service/">Farnham</a>
+                    <a href="../hook-service/">Hook</a>
+                    <a href="../woking-service/">Woking</a>
+                    <a href="../ash-vale-service/">Ash Vale</a>
                 </div>
             </div>
             <div class="nav-item">
-                <a href="blog.html" class="nav-link">Blog</a>
+                <a href="../blog/" class="nav-link">Blog</a>
             </div>
             <div class="nav-item">
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="../contact/" class="nav-link">Contact</a>
             </div>
         </nav>
 
@@ -197,19 +197,19 @@
                             onclick="showHideMenu()">Service</a>
                         <div class="service-submenu" id="submenu">
                             <div class="submenu-item">
-                                <a href="generalcleaning.html">General
+                                <a href="../generalcleaning/">General
                                     Cleaning</a>
                             </div>
                             <div class="submenu-item">
-                                <a href="deepcleaning.html">Deep Cleaning</a>
+                                <a href="../deepcleaning/">Deep Cleaning</a>
                             </div>
                         </div>
                     </div>
                     <div class="menu-item">
-                        <a href="blog.html">Blog</a>
+                        <a href="../blog/">Blog</a>
                     </div>
                     <div class="menu-item">
-                        <a href="contact.html">Contact</a>
+                        <a href="../contact/">Contact</a>
                     </div>
                 </div>
 
@@ -277,7 +277,7 @@
                 <div class="footer-links">
                     <a href="#privacy-policy">Privacy Policy</a>
                     <a href="#terms-of-service">Terms of Service</a>
-                    <a href="contact.html">Contact Us</a>
+                    <a href="../contact/">Contact Us</a>
                 </div>
             </div>
         </section>
@@ -293,7 +293,7 @@
             return false;
         }
     </script>
-        <script src="header.js"></script>
+        <script src="../header.js"></script>
     </body>
 
 </html>
