--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
             content="Looking for reliable cleaning services in Aldershot? Our trustworthy team provides top-quality deep cleaning and regular home upkeep. Get in touch for a free quote!">
         <link rel="canonical" href="https://banthacleaning.com/" />
         <meta content="0; url=https://banthacleaning.com/" />
-        <link rel="stylesheet" href="header.css">
+        <link rel="stylesheet" href="headerandfooter.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="offer.css">
-        <link rel="icon" type="image/png" href="logontp.png">
-        <link rel="shortcut icon" type="image/png" href="logontp.png">
-        <link rel="apple-touch-icon" href="logontp.png">
+        <link rel="icon" type="image/png" href="webimg/logontp.png">
+        <link rel="shortcut icon" type="image/png" href="webimg/logontp.png">
+        <link rel="apple-touch-icon" href="webimg/logontp.png">
     </head>
     <body>
         <header class="header">
@@ -22,7 +21,7 @@
         <!-- Logo -->
         <div class="logo-section">
             <a href="/">
-                <img src="logo.png" alt="Company Logo" class="logo">
+                <img src="webimg/logo.png" alt="Company Logo" class="logo">
             </a>
         </div>
 
@@ -46,8 +45,8 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                 <div class="dropdown">
-                    <a href="generalcleaning.html">General Cleaning</a>
-                    <a href="deepcleaning.html">Deep Cleaning</a>
+                    <a href="generalcleaning/">General Cleaning</a>
+                    <a href="deepcleaning/">Deep Cleaning</a>
                 </div>
             </div>
             <div class="nav-item">
@@ -56,23 +55,23 @@
                     <span class="dropdown-arrow">▼</span>
                 </a>
                                 <div class="dropdown">
-                    <a href="winchester-service.html">Winchester</a>
-                    <a href="andover-service.html">Andover</a>
-                    <a href="basingstoke-service.html">Basingstoke</a>
-                    <a href="aldershot-service.html">Aldershot</a>
-                    <a href="fleet-service.html">Fleet</a>
-                    <a href="farnborough-service.html">Farnborough</a>
-                    <a href="farnham-service.html">Farnham</a>
-                    <a href="hook-service.html">Hook</a>
-                    <a href="woking-service.html">Woking</a>
-                    <a href="ash-vale-service.html">Ash Vale</a>
+                    <a href="winchester-service/">Winchester</a>
+                    <a href="andover-service/">Andover</a>
+                    <a href="basingstoke-service/">Basingstoke</a>
+                    <a href="aldershot-service/">Aldershot</a>
+                    <a href="fleet-service/">Fleet</a>
+                    <a href="farnborough-service/">Farnborough</a>
+                    <a href="farnham-service/">Farnham</a>
+                    <a href="hook-service/">Hook</a>
+                    <a href="woking-service/">Woking</a>
+                    <a href="ash-vale-service/">Ash Vale</a>
                 </div>
             </div>
             <div class="nav-item">
-                <a href="blog.html" class="nav-link">Blog</a>
+                <a href="blog/" class="nav-link">Blog</a>
             </div>
             <div class="nav-item">
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="contact/" class="nav-link">Contact</a>
             </div>
         </nav>
 
@@ -136,7 +135,7 @@
         }
 
         function bookService() {
-            window.location.href = 'contact.html';
+            window.location.href = 'contact/';
         }
 
         // Close popup with Escape key
@@ -245,7 +244,7 @@
             <div class="services-container">
                 <!-- Service 1: Studio Cleaning -->
                 <div class="service-card">
-                    <div class="service-image"><img src="studio.webp"
+                    <div class="service-image"><img src="webimg/studio.webp"
                             alt="Studion Cleaning"></div>
                     <h3>Studio Cleaning</h3>
                     <p>Commercial Studio & Small Office Cleaning: Bantha
@@ -257,7 +256,7 @@
 
                 <!-- Service 2: Flat Cleaning -->
                 <div class="service-card">
-                    <div class="service-image"><img src="flatcleaning.webp"
+                    <div class="service-image"><img src="webimg/flatcleaning.webp"
                             alt="Flat Cleaning"></div>
                     <h3>Flat Cleaning</h3>
                     <p>Reliable Flat & Apartment Cleaning: Expert flat and
@@ -269,7 +268,7 @@
 
                 <!-- Service 3: House Cleaning -->
                 <div class="service-card">
-                    <div class="service-image"><img src="housecleaning.webp"
+                    <div class="service-image"><img src="webimg/housecleaning.webp"
                             alt="House Cleaning"></div>
                     <h3>House Cleaning</h3>
                     <p>Top-Rated House & Residential Deep Cleaning:
@@ -286,7 +285,7 @@
             <div class="about-container">
                 <!-- Left: Image -->
                 <div class="about-image">
-                    <img src="about-us.webp" alt="About Bantha Cleaning Ltd">
+                    <img src="webimg/about-us.webp" alt="About Bantha Cleaning Ltd">
                 </div>
 
                 <!-- Right: Content -->
@@ -319,9 +318,9 @@
         <section class="services-section">
             <div class="services-container">
                 <!-- Service Box 1: General Cleaning -->
-                <a href="generalcleaning.html" class="service-box">
+                <a href="generalcleaning/" class="service-box">
                     <div class="service-image">
-                        <img src="studio-cleaning.webp" alt="General Cleaning">
+                        <img src="webimg/studio-cleaning.webp" alt="General Cleaning">
                     </div>
                     <div class="service-text">
                         <h3>General Cleaning</h3>
@@ -329,9 +328,9 @@
                 </a>
 
                 <!-- Service Box 2: Deep Cleaning -->
-                <a href="deepcleaning.html" class="service-box">
+                <a href="deepcleaning/" class="service-box">
                     <div class="service-image">
-                        <img src="flat-cleaning.webp" alt="Deep Cleaning">
+                        <img src="webimg/flat-cleaning.webp" alt="Deep Cleaning">
                     </div>
                     <div class="service-text">
                         <h3>Deep Cleaning</h3>
@@ -350,34 +349,34 @@
             serving all major towns and communities in the area:</p>
 
         <div class="areas-grid">
-            <a href="winchester-service.html" class="area-item">
+            <a href="winchester-service/" class="area-item">
                 <span class="area-name">Winchester</span>
             </a>
-            <a href="andover-service.html" class="area-item">
+            <a href="andover-service/" class="area-item">
                 <span class="area-name">Andover</span>
             </a>
-            <a href="basingstoke-service.html" class="area-item">
+            <a href="basingstoke-service/" class="area-item">
                 <span class="area-name">Basingstoke</span>
             </a>
-            <a href="aldershot-service.html" class="area-item">
+            <a href="aldershot-service/" class="area-item">
                 <span class="area-name">Aldershot</span>
             </a>
-            <a href="fleet-service.html" class="area-item">
+            <a href="fleet-service/" class="area-item">
                 <span class="area-name">Fleet</span>
             </a>
-            <a href="farnborough-service.html" class="area-item">
+            <a href="farnborough-service/" class="area-item">
                 <span class="area-name">Farnborough</span>
             </a>
-            <a href="farnham-service.html" class="area-item">
+            <a href="farnham-service/" class="area-item">
                 <span class="area-name">Farnham</span>
             </a>
-            <a href="hook-service.html" class="area-item">
+            <a href="hook-service/" class="area-item">
                 <span class="area-name">Hook</span>
             </a>
-            <a href="woking-service.html" class="area-item">
+            <a href="woking-service/" class="area-item">
                 <span class="area-name">Woking</span>
             </a>
-            <a href="ash-vale-service.html" class="area-item">
+            <a href="ash-vale-service/" class="area-item">
                 <span class="area-name">Ash Vale</span>
             </a>
         </div>
@@ -398,19 +397,19 @@
                             onclick="showHideMenu()">Service</a>
                         <div class="service-submenu" id="submenu">
                             <div class="submenu-item">
-                                <a href="generalcleaning.html">General
+                                <a href="generalcleaning/">General
                                     Cleaning</a>
                             </div>
                             <div class="submenu-item">
-                                <a href="deepcleaning.html">Deep Cleaning</a>
+                                <a href="deepcleaning/">Deep Cleaning</a>
                             </div>
                         </div>
                     </div>
                     <div class="menu-item">
-                        <a href="blog.html">Blog</a>
+                        <a href="blog/">Blog</a>
                     </div>
                     <div class="menu-item">
-                        <a href="contact.html">Contact</a>
+                        <a href="contact/">Contact</a>
                     </div>
                 </div>
 
@@ -478,7 +477,7 @@
                 <div class="footer-links">
                     <a href="#privacy-policy">Privacy Policy</a>
                     <a href="#terms-of-service">Terms of Service</a>
-                    <a href="contact.html">Contact Us</a>
+                    <a href="contact/">Contact Us</a>
                 </div>
             </div>
         </section>
