--- a/index.html
+++ b/index.html
@@ -203,8 +203,7 @@
                 <!-- Right Side - Contact Form -->
                 <div class="contact-form-container">
                     <h2 class="form-title">Get In Touch</h2>
-                    <form class="contact-form"
-                        action="https://formspree.io/f/mandkpgw" method="POST">
+                    <form class="contact-form" name="contact" method="POST" data-netlify="true">
                         <!-- Row 1: Full Name and Postal Code -->
                         <div class="form-row">
                             <div class="form-group">
